<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2023-2024 The Evolution X Project
     SPDX-License-Identifier: Apache-2.0
-->
<resources>
    <string name="app_name">Pif</string>

    <string name="summary_empty" translatable="false"></string>

    <string name="pif_title">Integrity Settings</string>

    <string name="standard_integrity_title">Standard integrity approver</string>
    <string name="standard_integrity_summary">Enable support for approving standard integrity. Supported on most of devices.</string>
    <string name="strong_integrity_title">Strong integrity approver</string>
    <string name="strong_integrity_summary">Enable support for approving srong integrity. May not supported on some devices.</string>

    <string name="info">Information</string>

    <string name="manufacturer_title">Manufacturer</string>
    <string name="model_title">Model</string>
    <string name="fingerprint_title">Fingerprint</string>
    <string name="brand_title">Brand</string>
    <string name="product_title">Product</string>
    <string name="device_title">Device</string>
    <string name="release_title">Release</string>
    <string name="id_title">ID</string>
    <string name="incremental_title">Incremental</string>
    <string name="board_title">Board</string>
    <string name="hardware_title">Hardware</string>
    <string name="type_title">Type</string>
    <string name="tags_title">Tags</string>
    <string name="security_patch_title">Security patch</string>
    <string name="device_initial_sdk_int_title">Shipping API level</string>

    <string name="attestation">Attestation</string>

</resources>
